--- a/Dartin/Dartin.Application/Views/ImportExportView.xaml
+++ b/Dartin/Dartin.Application/Views/ImportExportView.xaml
@@ -11,26 +11,26 @@
 
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1*"></ColumnDefinition>
-                <ColumnDefinition Width="3*"></ColumnDefinition>
-                <ColumnDefinition Width="1*"></ColumnDefinition>
+                <ColumnDefinition Width="1*"/>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="1*"/>
             </Grid.ColumnDefinitions>
 
             <Grid.RowDefinitions>
-                <RowDefinition Height="2*"></RowDefinition>
-                <RowDefinition Height="2*"></RowDefinition>
-                <RowDefinition Height="2*"></RowDefinition>
-                <RowDefinition Height="2*"></RowDefinition>
-                <RowDefinition Height="2*"></RowDefinition>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="2*"/>
+                <RowDefinition Height="2*"/>
             </Grid.RowDefinitions>
 
-            <TextBlock Grid.Column="1" Text="Settings" Foreground="Black" FontSize="48" HorizontalAlignment="Center" VerticalAlignment="Center" Height="64" Width="170"></TextBlock>
+            <TextBlock Grid.Column="1" Text="Settings" Foreground="Black" FontSize="48" HorizontalAlignment="Center" VerticalAlignment="Center" Height="64" Width="170"/>
 
             <Button Grid.Row="1" Grid.Column="1" x:Name="Import" Width="auto" Height="auto" Margin="5,5,5,5">
                 <Button.Template>
                     <ControlTemplate>
                         <Border x:Name="border" Background="#777" Width="auto" Height="auto">
-                            <TextBlock Grid.Column="1" Text="Import" Foreground="Black" FontSize="36" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                            <TextBlock Grid.Column="1" Text="Import" Foreground="Black" FontSize="36" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
@@ -40,7 +40,7 @@
                 <Button.Template>
                     <ControlTemplate>
                         <Border x:Name="border" Background="#777" Width="auto" Height="auto">
-                            <TextBlock Grid.Column="1" Text="Export" Foreground="Black" FontSize="36" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                            <TextBlock Grid.Column="1" Text="Export" Foreground="Black" FontSize="36" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
@@ -50,7 +50,7 @@
                 <Button.Template>
                     <ControlTemplate>
                         <Border x:Name="border" Background="#777" Width="auto" Height="auto">
-                            <TextBlock Grid.Column="1" Text="Clear Database" Foreground="Black" FontSize="36" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                            <TextBlock Grid.Column="1" Text="Clear Database" Foreground="Black" FontSize="36" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
@@ -60,7 +60,7 @@
                 <Button.Template>
                     <ControlTemplate>
                         <Border x:Name="border" Background="#777" Width="100" Height="50">
-                            <TextBlock Grid.Column="1" Text="Main menu" Foreground="Black" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                            <TextBlock Grid.Column="1" Text="Main menu" Foreground="Black" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
