--- a/Dartin/Dartin.Application/Views/ShellView.xaml
+++ b/Dartin/Dartin.Application/Views/ShellView.xaml
@@ -9,12 +9,12 @@
         Title="Dartin" Height="450" Width="800">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="50"></ColumnDefinition>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="50"/>
         </Grid.ColumnDefinitions>
         <Button x:Name="HelpClick" Grid.Row="0" Grid.Column="1" Content="Help"/>
         <ContentControl Grid.ColumnSpan="2" Grid.Row="1"  x:Name="ActiveItem" />
