--- a/Dartin/Dartin.Application/Views/ScoreboardView.xaml
+++ b/Dartin/Dartin.Application/Views/ScoreboardView.xaml
@@ -3,9 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Dartin.Views"
              xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro.Platform"
-             xmlns:custom="clr-namespace:Dartin.Controls"
              xmlns:conv="clr-namespace:Dartin.Converters"
              mc:Ignorable="d" >
 
@@ -42,10 +40,10 @@
                 </Grid.RowDefinitions>
 
                 <!--PlayerInfo-->
-                <Image Grid.Row="0" Grid.Column="0" Source="{Binding Player1.Nationality, Converter={conv:CountryIdToFlagImageConverter}}" RenderOptions.BitmapScalingMode="HighQuality" Stretch="None"/>
-                <Label Grid.Row="0" Grid.Column="1" Content="{Binding Player1.Name}" FontSize="16" FontWeight="Bold"/>
-                <Image Grid.Row="0" Grid.Column="2" Visibility="{Binding PlayerTurnIndicator, Converter={conv:BoolToVisibilityConverter}}" Source="/Resources/indicator.png" Height="10"/>
-                <Image Grid.Row="0" Grid.Column="3" Visibility="{Binding PlayerLegStartIndicator, Converter={conv:BoolToVisibilityConverter}}" Source="/Resources/turnindicator-left.png" Height="10" />
+                <Image Grid.Row="0" Grid.Column="0" Source="{Binding Player1.Nationality, Converter={conv:CountryIdToFlagImageConverter}}" RenderOptions.BitmapScalingMode="HighQuality" Stretch="None" HorizontalAlignment="Left"/>
+                <Label Grid.Row="0" Grid.Column="1" Content="{Binding Player1.Name}" FontSize="16" FontWeight="Bold" HorizontalAlignment="Left"/>
+                <Image Grid.Row="0" Grid.Column="2" Visibility="{Binding PlayerTurnIndicator, Converter={conv:BoolToVisibilityConverter}}" Source="/Resources/indicator.png" Height="10" HorizontalAlignment="Right"/>
+                <Image Grid.Row="0" Grid.Column="3" Visibility="{Binding PlayerLegStartIndicator, Converter={conv:BoolToVisibilityConverter}}" Source="/Resources/turnindicator-left.png" Height="10" HorizontalAlignment="Right" />
                 <!--PlayerScore-->
                 <Grid Grid.Row="1" Grid.ColumnSpan="4">
                     <Grid.ColumnDefinitions>
@@ -113,10 +111,10 @@
                     <RowDefinition/>
                     <RowDefinition/>
                 </Grid.RowDefinitions>
-                <Image Grid.Row="0" Grid.Column="0" Source="{Binding Player2.Nationality, Converter={conv:CountryIdToFlagImageConverter}}" RenderOptions.BitmapScalingMode="HighQuality" Stretch="None"/>
-                <Label Grid.Row="0" Grid.Column="1" Content="{Binding Player2.Name}" FontSize="16" FontWeight="Bold"/>
-                <Image Grid.Row="0" Grid.Column="2" Visibility="{Binding PlayerTurnIndicator, Converter={conv:InverseBoolToVisibilityConverter}}" Source="/Resources/indicator.png" Height="10" HorizontalAlignment="Right" />
-                <Image Grid.Row="0" Grid.Column="3" Visibility="{Binding PlayerLegStartIndicator, Converter={conv:InverseBoolToVisibilityConverter}}" Source="/Resources/turnindicator-left.png" Height="10" HorizontalAlignment="Right" />
+                <Image Grid.Row="0" Grid.Column="0" Visibility="{Binding PlayerLegStartIndicator, Converter={conv:InverseBoolToVisibilityConverter}}" Source="/Resources/turnindicator-right.png" Height="10" HorizontalAlignment="Left" />
+                <Image Grid.Row="0" Grid.Column="1" Visibility="{Binding PlayerTurnIndicator, Converter={conv:InverseBoolToVisibilityConverter}}" Source="/Resources/indicator.png" Height="10" HorizontalAlignment="Left" />
+                <Image Grid.Row="0" Grid.Column="2" Source="{Binding Player2.Nationality, Converter={conv:CountryIdToFlagImageConverter}}" RenderOptions.BitmapScalingMode="HighQuality" Stretch="None"/>
+                <Label Grid.Row="0" Grid.Column="3" Content="{Binding Player2.Name}" FontSize="16" FontWeight="Bold" HorizontalAlignment="Right"/>
 
                 <!--PlayerScore-->
                 <Grid Grid.Row="1" Grid.ColumnSpan="4">
@@ -148,7 +146,14 @@
                         <ColumnDefinition/>
                         <ColumnDefinition/>
                     </Grid.ColumnDefinitions>
-                    <ListView ItemsSource="{Binding Player2Turns}" HorizontalAlignment="Center" BorderThickness="0" MinWidth="256" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Column="0">
+                    <ListView ItemsSource="{Binding Player2Remainders}" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
+                        <ListView.View>
+                            <GridView AllowsColumnReorder="False">
+                                <GridViewColumn Header="Remainder" Width="64" DisplayMemberBinding="{Binding}"/>
+                            </GridView>
+                        </ListView.View>
+                    </ListView>
+                    <ListView ItemsSource="{Binding Player2Turns}" HorizontalAlignment="Center" BorderThickness="0" MinWidth="256" ScrollViewer.HorizontalScrollBarVisibility="Disabled" Grid.Column="1">
                         <ListView.Resources>
                             <Style TargetType="{x:Type TextBlock}">
                                 <Setter Property="Foreground" Value="{Binding Path=Valid, Converter={conv:BrushColorConverter}}"/>
@@ -156,17 +161,10 @@
                         </ListView.Resources>
                         <ListView.View>
                             <GridView AllowsColumnReorder="False">
-                                <GridViewColumn Header="1" Width="64" DisplayMemberBinding="{Binding Tosses[0].TotalScore}"/>
-                                <GridViewColumn Header="2" Width="64" DisplayMemberBinding="{Binding Tosses[1].TotalScore}"/>
-                                <GridViewColumn Header="3" Width="64" DisplayMemberBinding="{Binding Tosses[2].TotalScore}"/>
                                 <GridViewColumn Header="Total" Width="64" DisplayMemberBinding="{Binding Score}"/>
-                            </GridView>
-                        </ListView.View>
-                    </ListView>
-                    <ListView ItemsSource="{Binding Player2Remainders}" BorderThickness="0" Grid.Column="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
-                        <ListView.View>
-                            <GridView AllowsColumnReorder="False">
-                                <GridViewColumn Header="Remainder" Width="64" DisplayMemberBinding="{Binding}"/>
+                                <GridViewColumn Header="3" Width="64" DisplayMemberBinding="{Binding Tosses[2].TotalScore}"/>
+                                <GridViewColumn Header="2" Width="64" DisplayMemberBinding="{Binding Tosses[1].TotalScore}"/>
+                                <GridViewColumn Header="1" Width="64" DisplayMemberBinding="{Binding Tosses[0].TotalScore}"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
