--- a/Dartin/Dartin.Application/Views/MainMenuView.xaml
+++ b/Dartin/Dartin.Application/Views/MainMenuView.xaml
@@ -29,13 +29,13 @@
                 <Button.Template>
                     <ControlTemplate>
                         <Border x:Name="border" Background="#777" Width="250" Height="100">
-                            <TextBlock Grid.Column="1" Text="Wedstrijden" Foreground="Black" FontSize="36" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Column="1" Text="Matches" Foreground="Black" FontSize="36" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
             </Button>
 
-            <Button Grid.Row="2" Grid.Column="1" x:Name="Darters" Width="auto" Height="auto">
+            <Button Grid.Row="2" Grid.Column="1" x:Name="Players" Width="auto" Height="auto">
                 <Button.Template>
                     <ControlTemplate>
                         <Border x:Name="border" Background="#777" Width="250" Height="100">
@@ -49,7 +49,7 @@
                 <Button.Template>
                     <ControlTemplate>
                         <Border x:Name="border" Background="#777" Width="100" Height="75">
-                            <TextBlock Grid.Column="1" Text="Instellingen" Foreground="Black" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                            <TextBlock Grid.Column="1" Text="Settings" Foreground="Black" FontSize="18" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                         </Border>
                     </ControlTemplate>
                 </Button.Template>
